Tue Jul  2 17:23:33 2013  Shugo Maeda  <shugo@ruby-lang.org>

	* doc/syntax/refinements.rdoc: add description of Module#using and
	  refinement inheritance by module inclusion.

Tue Jul  2 17:22:44 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* internal.h: add EUC-JP and Windows-31J.

	* re.c (rb_char_to_option_kcode): use built-in encoding indexes in
	  internal.h.

	* internal.h: add UTF8-MAC.

	* dir.c (rb_utf8mac_encoding): use built-in encoding indexes in
	  internal.h.

	* internal.h: add UTF-{16,32} dummy encodings.

	* string.c (rb_str_inspect, str_scrub0): use built-in encoding indexes
	  in internal.h.

	* internal.h: add UTF-{16,32}{BE,LE}.

	* io.c (io_strip_bom): use built-in encoding indexes in internal.h.

	* internal.h (rb_{ascii8bit,utf8,usascii}_encindex): use built-in
	  encoding indexes for optimization.

	* encoding.c (enc_inspect, rb_locale_encindex),
	  (enc_set_filesystem_encoding, rb_filesystem_encindex): use built-in
	  encoding indexes directly.

	* encoding.c (rb_enc_set_index, rb_enc_associate_index): validate
	  argument encoding index.

	* include/ruby/encoding.h (ENCODING_SET): use rb_enc_set_index()
	  instead of setting inlined bits directly.

	* encoding.c (rb_enc_init): register preserved indexes.

	* internal.h (ruby_preserved_encindex): move from encoding.c.

Tue Jul  2 11:14:36 2013  Shota Fukumori  <sorah@cookpad.com>

	* lib/mkmf.rb (try_config): Fix to not replace $LDFLAGS with $libs
	  (1.9.3 behavior) [ruby-core:55752] [Bug #8595]

Tue Jul  2 00:39:59 2013  Tanaka Akira  <akr@fsij.org>

	* ext/socket/ipsocket.c (init_inetsock_internal): Don't try mismatched
	  address family if already failed.

Mon Jul  1 23:07:38 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* template/encdb.h.tmpl: define encoding index macros to use the index
	  statically from C source.

Mon Jul  1 22:57:19 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bary_mul2): New function.
	  (rb_cstr_to_inum): Use a better algorithm to compose the result